# DX_Controller

./: README.md
firmware/: .gitignore  CMakeLists.txt  build.bat
firmware/modules/aic_pico/: README.md  README_CN.md
firmware/modules/aic_pico/PCB/Key/: aic_key.kicad_pcb  aic_key.kicad_sch
firmware/modules/aic_pico/PCB/Lib/aic_pico.pretty/: FPC-0.5-1.0H-18P.kicad_mod  RPi_Pico_SMD_No_USB.kicad_mod  WS2812B-4020.kicad_mod
firmware/modules/aic_pico/PCB/Touch/: aic_touch.kicad_pcb  aic_touch.kicad_sch  fp-info-cache
firmware/modules/aic_pico/firmware/include/: aime.h  bana.h  mode.h  nfc.h
firmware/modules/aic_pico/firmware/src/: CMakeLists.txt  board_defs.h  cli.c  cli.h  commands.c  config.c  config.h  cst816t.c  cst816t.h  gui.c  gui.h  keypad.c  keypad.h  light.h  main.c  st7789.c
firmware/modules/aic_pico/firmware/src/lib/: aime.c  bana.c  pn5180.c  pn5180.h  pn532.c  pn532.h  records.txt
firmware/modules/aic_pico/firmware/src/res/: resource.h
firmware/modules/aic_pico/firmware/tools/: image_conv.c
firmware/src/: CMakeLists.txt  board_defs.h  button.c  button.h  cli.c  commands.c  commands.h  config.c  config.h  hid.c  io.c  io.h  main.c  mpr121.c  mpr121.h  rgb.h  usb_descriptors.c  usb_descriptors.h
hardware/pcbboard/: TDX_Lite_testboard_1.0.epro  TDX_Pro_mainboard_1.0.epro  TDX_Pro_touchsubboard_1.0.epro
